Added FluentValidation and MediatR

--- a/Back-Quiz/Back-Quiz/appsettings.Development.json
+++ b/Back-Quiz/Back-Quiz/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "PostgreSQL": "host=localhost;port=5432;database=Quiz;username=postgres;password=1234567890"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7168",
+    "Audience": "http://localhost:7168",
+    "SigningKey": "fjKLFJdjkfjsfijfijskljfklsj323782dkjslfhrknjfkjsjhefjks"
   }
 }
