--- a/Back-Quiz/Back-Quiz/Back-Quiz.csproj
+++ b/Back-Quiz/Back-Quiz/Back-Quiz.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.6" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
     </ItemGroup>
 
