--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
 ﻿**/.dockerignore
-**/.env
+**/.env.development
 **/.git
 **/.gitignore
 **/.project
@@ -21,5 +21,7 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/build
+**/dist
 LICENSE
 README.md
