--- a/Back-Quiz/Back-Quiz/Dockerfile
+++ b/Back-Quiz/Back-Quiz/Dockerfile
@@ -1,17 +1,14 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Back-Quiz/Back-Quiz.csproj", "Back-Quiz/"]
-RUN dotnet restore "Back-Quiz/Back-Quiz.csproj"
+COPY ["Back-Quiz.csproj", "./"]
+RUN dotnet restore "Back-Quiz.csproj"
 COPY . .
-WORKDIR "/src/Back-Quiz"
-RUN dotnet build "./Back-Quiz.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Back-Quiz.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
